--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Journey</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="navbar.css">
-        <script src="script.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAvfDBMIvi0xYZhEmntRWXxm5tb-KHciw"></script>
-    </head>
+  <head>
+    <meta charset="UTF-8">
+      <title>Journey</title>
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="navbar.css">
+      <script src="script.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAvfDBMIvi0xYZhEmntRWXxm5tb-KHciw"></script>
+  </head>
 
-    <body onload="initMap();">
-        <header class="header">
-            <nav class="navbar">
-                <a href="#index" class="nav-name">Journey</a>
-            </nav>
-        </header>
+  <body onload="initMap();">
+    <header class="header">
+      <nav class="navbar">
+        <a href="#index" class="nav-name">Journey</a>
+      </nav>
+    </header>
 
-        <div class = "padding row">
-            <div id="map"></div>
-            <div class = "content-box">
-                <div class = "searchbar">
-                    <input type="text" class = "searchbar" placeholder="Search...">
-                </div>
-            </div>
+    <div class = "padding row">
+      <div id="map"></div>
+      <div class = "side-bar">
+          <div class = "searchbar">
+            <input type="text" class = "searchbar" placeholder="Search...">
+          </div>
+        <div class= "content">
+          <div id = "nearbyStops"></div>
+          <div id = "transitTimes"></div>
         </div>
 
-    </body>
-</html>
+      </div>
+    </div>  
+  </body>
+
+  </html>
