--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,3 +1,4 @@
+<html>
   <head>
     <meta charset="UTF-8">
       <title>Journey</title>
@@ -47,5 +48,4 @@
       </div>
     </div>  
   </body>
-
-  </html>
+</html>
