adds method to get all subway stops

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,6 +45,12 @@
           <div id="transitTimesContainer"></div>
         </div>
 
+        <form action="/abc" method="POST">
+            <p>Enter Bus stop</p>
+            <textarea name="text-input">400561</textarea>
+            <input type="submit">
+        </form>
+
       </div>
     </div>  
   </body>
