Adds initial servlet

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,7 +47,7 @@
 
         <form action="/abc" method="POST">
             <p>Enter Bus stop</p>
-            <textarea name="text-input">400561</textarea>
+            <textarea name="text-input">40.738523 -73.988599</textarea>
             <input type="submit">
         </form>
 
