Adds method to get stops/stations within .5km

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,9 +45,9 @@
           <div id="transitTimesContainer"></div>
         </div>
 
-        <form action="/abc" method="POST">
+        <form action="/stops" method="POST">
             <p>Enter Bus stop</p>
-            <textarea name="text-input">40.738523 -73.988599</textarea>
+            <textarea name="text-input">40.712742 -74.013382</textarea>
             <input type="submit">
         </form>
 
