Adds vehicle servlet

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,9 +45,9 @@
           <div id="transitTimesContainer"></div>
         </div>
 
-        <form action="/stops" method="POST">
+        <form action="/vehicles" method="POST">
             <p>Enter Bus stop</p>
-            <textarea name="text-input">40.712742 -74.013382</textarea>
+            <textarea name="text-input">300000 0</textarea>
             <input type="submit">
         </form>
 
