front-back end integration

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -62,6 +62,12 @@
             <input type="submit">
         </form>
 
+        <form action="/stops" method="POST">
+            <p>get stop</p>
+            <textarea name="text-input">300000 0</textarea>
+            <input type="submit">
+        </form>
+
       </div>
     </div>  
   </body>
