implement servlet connection

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,12 +39,11 @@
             <h2 id="lineName"></h2>
             <br>
             Route: <span id="routeDescription"></span>
-            <!-- <h4 id = "showTransport" style="color: #5384ED;">Show/Hide Locations →</h4> -->
             <br>
           </template>
           <div id="transitLineContainer"></div>
 
-          <!-- <template id="transitTimes">
+          <template id="transitTimes">
             <h2 id="lineName"></h2>
             <br>
             Route: <span id="routeDescription"></span>
@@ -53,20 +52,8 @@
             <br><br>
             PLACE HOLDER FOR WHEN TIME IS ADDED
           </template>
-          <div id="transitTimesContainer"></div> -->
+          <div id="transitTimesContainer"></div>
         </div>
-
-        <form action="/vehicles" method="POST">
-            <p>Enter Bus stop</p>
-            <textarea name="text-input">300000 0</textarea>
-            <input type="submit">
-        </form>
-
-        <form action="/stops" method="POST">
-            <p>get stop</p>
-            <textarea name="text-input">300000 0</textarea>
-            <input type="submit">
-        </form>
 
       </div>
     </div>  
