fix html and js

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,6 +40,7 @@
             <br>
             Route: <span id="routeDescription"></span>
             <br>
+            <h4 id = "showTransport" style="color: #5384ED;">Show Locations</h4>
           </template>
           <div id="transitLineContainer"></div>
 
