--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,12 +38,12 @@
             <br>
             <h2 id="lineName"></h2>
             <br>
-            Route: <span id="routeDescription"></span>
-            <br>
-            <h4 id = "showTransport" style="color: #5384ED;">Show Locations</h4>
+            Current Station: <span id="stationName"></span>
+            <br><br>
+            <h4 id = "showTransport" style="color: #5384ED;">Show Locations →</h4>
           </template>
           <div id="transitLineContainer"></div>
-
+<!-- 
           <template id="transitTimes">
             <h2 id="lineName"></h2>
             <br>
@@ -53,7 +53,7 @@
             <br><br>
             PLACE HOLDER FOR WHEN TIME IS ADDED
           </template>
-          <div id="transitTimesContainer"></div>
+          <div id="transitTimesContainer"></div> -->
         </div>
 
       </div>
